# AbstractMemory

./: .gitignore  2025-09-25-test-agent.txt  2025-09-26-nexus-tools.txt  2025-09-26-tui.txt  2025-09-29-refactor.txt  2025-09-30-1.txt  2025-09-30-3.txt  2025-09-30-reforge.txt  2025-10-04-context-builder.txt  ACKNOWLEDGMENTS.md  ACKNOWLEDMENTS.md  ARCHITECTURE_CLEAN.md  AUTONOMOUS_AGENT_CLI.md  CHANGELOD.md  CHANGELOG.md  CLAUDE.md  CLAUDE_SESSION_4_2025-09-30.md  CLAUDE_UPDATE_2025-09-30.md  CLAUDE_UPDATE_2025-09-30_MNEMOSYNE.md  CODE_IMPROVEMENTS.md  CONTRIBUTING.md  CURRENT_IMPLEMENTATION_GAP_ANALYSIS.md  DOCS_UPDATE_FINAL_REPORT.md  EMBEDDING_CACHE_FIX.md  FINAL_HONEST_REPORT_2025-09-30.md  FIXES_SUMMARY.md  HONEST_ASSESSMENT_TASK_SCOPE.md  IMPLEMENTATION_SUMMARY.md  INSIGHTS_EXTRACTION_REPORT_2025-09-30.md  KG-acore.md  KG-amem.md  LICENSE  NEXT_STEPS_IMPLEMENTATION.md  NEXT_STEPS_PHASE3.md  PHASE_2_COMPLETE_2025-09-30.md  PHASE_2_COMPLETE_LLM_BASED_2025-09-30.md  PHASE_2_PLAN_2025-09-30.md  PHASE_2_REDESIGN_CRITICAL_2025-09-30.md  QUICKSTART.md  REACT_LOOP_FIX_2025-10-02.md  (+35 more)
aa-tui/: 2025-09-26-tui2.txt  2025-09-27-tui-go.txt  2025-09-27-tuix.txt  2025-09-28-attempt-fix.txt  2025-09-28-fix-rightp.txt  2025-09-28-tui-agents.txt  COMMUNICATION_FIX_STATUS.md  DEPLOYMENT_STATUS.md  DEPRECATED_nexus_tui.md  NEW_TUI_README.md  PHASE1_IMPLEMENTATION.md  README.md  README_TUI.md  TESTING_GUIDE.md  __init__.py  debug_tui.py  enhanced_tui-pyperclip.py  enhanced_tui.py  minimal_test.py  modern_tui.py  nexus_tui.py  react_loop.py  run_demo.sh  simple_test.py  simple_tui.py  (+25 more)
(+899 files in other folders)
